--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
@@ -7,8 +7,18 @@
 	mc:Ignorable="d"
 	xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	xmlns:utu="using:Uno.Toolkit.UI"
+	xmlns:embed="using:Uno.Extensions.Maui"
+	xmlns:maui="using:Microsoft.Maui.Controls"
 	NavigationCacheMode="Required"
 	Background="{ThemeResource BackgroundBrush}">
+
+	<Page.Resources>
+		<ResourceDictionary>
+			<x:String x:Key="HelloWorld">Hello from WinUI Resources</x:String>
+			<Color x:Key="DemoColor">#169420</Color>
+			<local:TitleConverter x:Key="TitleConverter" />
+		</ResourceDictionary>
+	</Page.Resources>
 
 	<Grid utu:SafeArea.Insets="All">
 		<Grid.RowDefinitions>
@@ -16,6 +26,21 @@
 			<RowDefinition />
 		</Grid.RowDefinitions>
 		<utu:NavigationBar Content="{Binding Title}" />
+
+		<embed:MauiContent Grid.Row="1">
+			<maui:ScrollView>
+				<maui:ScrollView.Content>
+					<maui:VerticalStackLayout Spacing="16">
+						<maui:Label Text="{embed:MauiResource Key=HelloWorld}"
+							TextColor="{embed:MauiResource Key=DemoColor}" />
+						<maui:BoxView BackgroundColor="{embed:MauiColor Value='#696969'}"
+							HeightRequest="3"
+							Margin="{embed:MauiThickness Value='10,20,30,40'}"/>
+						<maui:Label Text="{embed:MauiBinding Path=Title, Converter={StaticResource TitleConverter}}" />
+					</maui:VerticalStackLayout>
+				</maui:ScrollView.Content>
+			</maui:ScrollView>
+		</embed:MauiContent>
 
 		<StackPanel Grid.Row="1"
 					HorizontalAlignment="Center"
