--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/Shell.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/Shell.xaml
@@ -1,19 +1,21 @@
-﻿<UserControl x:Class="MauiEmbedding.Presentation.Shell"
+﻿<UserControl
+	x:Class="MauiEmbedding.Presentation.Shell"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:local="using:MauiEmbedding.Presentation"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:MauiEmbedding.Presentation"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:utu="using:Uno.Toolkit.UI"
-	mc:Ignorable="d"
 	d:DesignHeight="300"
-	d:DesignWidth="400">
+	d:DesignWidth="400"
+	mc:Ignorable="d">
 	<Border Background="{ThemeResource BackgroundBrush}">
-		<utu:ExtendedSplashScreen x:Name="Splash"
-								HorizontalAlignment="Stretch"
-								VerticalAlignment="Stretch"
-								HorizontalContentAlignment="Stretch"
-								VerticalContentAlignment="Stretch">
+		<utu:ExtendedSplashScreen
+			x:Name="Splash"
+			HorizontalAlignment="Stretch"
+			VerticalAlignment="Stretch"
+			HorizontalContentAlignment="Stretch"
+			VerticalContentAlignment="Stretch">
 			<utu:ExtendedSplashScreen.LoadingContentTemplate>
 				<DataTemplate>
 					<Grid>
@@ -22,12 +24,13 @@
 							<RowDefinition />
 						</Grid.RowDefinitions>
 
-						<ProgressRing IsActive="True"
-									Grid.Row="1"
-									VerticalAlignment="Center"
-									HorizontalAlignment="Center"
-									Height="100"
-									Width="100" />
+						<ProgressRing
+							Grid.Row="1"
+							Width="100"
+							Height="100"
+							HorizontalAlignment="Center"
+							VerticalAlignment="Center"
+							IsActive="True" />
 					</Grid>
 				</DataTemplate>
 			</utu:ExtendedSplashScreen.LoadingContentTemplate>
