feat: added Maui Essentials API page
(cherry picked from commit e2fa2cadc678e2b5b121abe88575632dea4126cc)

--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
@@ -13,6 +13,7 @@
 		Spacing="10">
 		<Button Click="{x:Bind Vm.GoToMauiControls}" Content="Maui simple controls" />
 		<Button Click="{x:Bind Vm.GoToCommunityToolkitMauiControls}" Content="CommunityToolkit.Maui controls" />
+		<Button Click="{x:Bind Vm.GoToMauiEssentialsApi}" Content="Maui.Essentials APIs" />
 	</StackPanel>
 
 </Page>
