--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MCTControlsPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MCTControlsPage.xaml
@@ -1,18 +1,17 @@
-﻿<Page
-	x:Class="MauiEmbedding.Presentation.MCTControlsPage"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:embed="using:Uno.Extensions.Maui"
-	xmlns:local="using:MauiEmbedding.Presentation"
-	xmlns:maui="using:Microsoft.Maui.Controls"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-	xmlns:uen="using:Uno.Extensions.Navigation.UI"
-	xmlns:utu="using:Uno.Toolkit.UI"
-	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-	NavigationCacheMode="Required"
-	mc:Ignorable="d">
+﻿<Page x:Class="MauiEmbedding.Presentation.MCTControlsPage"
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:embed="using:Uno.Extensions.Maui"
+	  xmlns:local="using:MauiEmbedding.Presentation"
+	  xmlns:maui="using:Microsoft.Maui.Controls"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:toolkit="using:CommunityToolkit.Maui.Views"
+	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	  xmlns:utu="using:Uno.Toolkit.UI"
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	  NavigationCacheMode="Required"
+	  mc:Ignorable="d">
 
 	<Grid>
 		<Grid.RowDefinitions>
@@ -21,28 +20,26 @@
 		</Grid.RowDefinitions>
 		<utu:NavigationBar Content="{Binding Title}" />
 
-		<StackPanel
-			Grid.Row="1"
-			HorizontalAlignment="Center"
-			VerticalAlignment="Center">
-			<TextBlock FontSize="24" Text="MCT controls" />
+		<StackPanel Grid.Row="1"
+					HorizontalAlignment="Center"
+					VerticalAlignment="Center">
+			<TextBlock FontSize="24"
+					   Text="MCT controls" />
 			<embed:MauiContent>
 				<maui:ScrollView>
 					<maui:ScrollView.Content>
 						<maui:VerticalStackLayout Spacing="16">
-							<toolkit:DrawingView
-								HeightRequest="300"
-								IsMultiLineModeEnabled="true"
-								LineColor="{embed:MauiColor Value='#FF0000'}"
-								LineWidth="5"
-								WidthRequest="300" />
+							<toolkit:DrawingView HeightRequest="300"
+												 IsMultiLineModeEnabled="true"
+												 LineColor="{embed:MauiColor Value='#FF0000'}"
+												 LineWidth="5"
+												 WidthRequest="300" />
 
 							<toolkit:Expander>
 								<toolkit:Expander.Header>
-									<maui:Label
-										FontAttributes="Bold"
-										FontSize="16"
-										Text="Simple Expander (Tap Me)" />
+									<maui:Label FontAttributes="Bold"
+												FontSize="16"
+												Text="Simple Expander (Tap Me)" />
 								</toolkit:Expander.Header>
 
 								<toolkit:Expander.Content>
