--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MauiControlsPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MauiControlsPage.xaml
@@ -31,13 +31,15 @@
 		<embed:MauiContent Grid.Row="1">
 			<maui:ScrollView>
 				<maui:ScrollView.Content>
-					<maui:VerticalStackLayout Spacing="16">
+					<maui:VerticalStackLayout x:Name="stack" Spacing="16">
+
 						<maui:Label Text="{embed:MauiResource Key=HelloWorld}" TextColor="{embed:MauiResource Key=DemoColor}" />
-						<maui:BoxView
-							Margin="{embed:MauiThickness Value='10,20,30,40'}"
-							BackgroundColor="{embed:MauiColor Value='Fuchsia'}"
-							HeightRequest="300" />
-						<maui:Label x:Name="lbl" Text="{embed:MauiBinding Path=Title, Converter={StaticResource TitleConverter}}" />
+						<!--<maui:BoxView HeightRequest="300" />-->
+						<!--<maui:Label Text="{embed:MauiResource Key=HelloWorld}" TextColor="{embed:MauiResource Key=DemoColor}" />
+		
+						
+		<maui:Label x:Name="lbl" Text="{embed:MauiBinding Path=Title, Converter={StaticResource TitleConverter}}" />-->
+
 					</maui:VerticalStackLayout>
 				</maui:ScrollView.Content>
 			</maui:ScrollView>
