chore: changed the sample to make sure controls are showing
(cherry picked from commit 71b04dbe6a43e61117ea060d9348e2c4cae23575)

--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MauiControlsPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MauiControlsPage.xaml
@@ -29,20 +29,25 @@
 		<utu:NavigationBar Content="{Binding Title}" />
 
 		<embed:MauiContent Grid.Row="1">
-			<maui:ScrollView>
-				<maui:ScrollView.Content>
-					<maui:VerticalStackLayout x:Name="stack" Spacing="16">
+			<maui:VerticalStackLayout x:Name="stack" Spacing="16">
 
-						<maui:Label Text="{embed:MauiResource Key=HelloWorld}" TextColor="{embed:MauiResource Key=DemoColor}" />
-						<!--<maui:BoxView HeightRequest="300" />-->
-						<!--<maui:Label Text="{embed:MauiResource Key=HelloWorld}" TextColor="{embed:MauiResource Key=DemoColor}" />
-		
-						
-		<maui:Label x:Name="lbl" Text="{embed:MauiBinding Path=Title, Converter={StaticResource TitleConverter}}" />-->
+				<maui:Label Text="Hello World">
+					<!--  This doesn't work here  -->
+					<!--  Probably related to https://github.com/microsoft/microsoft-ui-xaml/issues/2232  -->
+					<!--<maui:Label.HeightRequest>
+						<x:Double>600</x:Double>
+					</maui:Label.HeightRequest>-->
+				</maui:Label>
 
-					</maui:VerticalStackLayout>
-				</maui:ScrollView.Content>
-			</maui:ScrollView>
+				<maui:Button Text="Click me" />
+
+				<maui:Entry Placeholder="Some text" />
+
+				<maui:Picker x:Name="picker" Title="Some UI frameworks picker" />
+
+				<maui:ActivityIndicator IsRunning="true" />
+
+			</maui:VerticalStackLayout>
 		</embed:MauiContent>
 
 		<StackPanel
