--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MCTControlsPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MCTControlsPage.xaml
@@ -10,7 +10,7 @@
 	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	  xmlns:utu="using:Uno.Toolkit.UI"
 	  Background="{ThemeResource BackgroundBrush}"
-	  NavigationCacheMode="Required"
+	  NavigationCacheMode="Disabled"
 	  mc:Ignorable="d">
 
 	<Grid>
@@ -29,17 +29,13 @@
 				<maui:ScrollView>
 					<maui:ScrollView.Content>
 						<maui:VerticalStackLayout Spacing="16" x:Name="layout">
-							<toolkit:DrawingView HeightRequest="300"
+							<toolkit:DrawingView 
 												 IsMultiLineModeEnabled="true"
-												 LineColor="{embed:MauiColor Value='#FF0000'}"
-												 LineWidth="5"
-												 WidthRequest="300"
 												 />
 
 							<toolkit:Expander>
 								<toolkit:Expander.Header>
-									<maui:Label FontAttributes="Bold"
-												FontSize="16"
+									<maui:Label 
 												Text="Simple Expander (Tap Me)" />
 								</toolkit:Expander.Header>
 
