feat: Adding flyout test cases

--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Dialogs/DialogsBasicFlyout.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Dialogs/DialogsBasicFlyout.xaml
@@ -11,7 +11,8 @@
 	<Grid>
 		<TextBlock Text="Shown in Flyout" />
 		<StackPanel VerticalAlignment="Bottom">
-			<Button Content="Close from XAML"
+			<Button  AutomationProperties.AutomationId="DialogsFlyoutDialogCloseButton"
+					 Content="Close from XAML"
 					uen:Navigation.Request="-" />
 			<Button Content="Close from ViewModel"
 					Click="{x:Bind ViewModel.Close}" />
