--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Dialogs/DialogsFlyoutsPage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Dialogs/DialogsFlyoutsPage.xaml
@@ -20,13 +20,17 @@
 
 		<ScrollViewer Grid.Row="1">
 			<StackPanel>
-				<Button uen:Navigation.Request="!DialogsBasic"
+				<Button AutomationProperties.AutomationId="FlyoutDialogXamlButton"
+						uen:Navigation.Request="!DialogsBasic"
 						Content="Flyout from Xaml" />
-				<Button Content="Flyout from Background Thread"
+				<Button  AutomationProperties.AutomationId="FlyoutDialogCodebehindButton"
+						 Content="Flyout from Background Thread"
 						Click="FlyoutFromBackgroundClick" />
-				<Button Content="Flyout from Background Thread requesting data"
+				<Button  AutomationProperties.AutomationId="FlyoutDialogCodebehindBackgroundButton"
+						 Content="Flyout from Background Thread requesting data"
 						Click="FlyoutFromBackgroundRequestingDataClick" />
-				<Button Content="Flyout requesting data with cancellation (2s)"
+				<Button AutomationProperties.AutomationId="FlyoutDialogCodebehindWithCancelButton"
+						Content="Flyout requesting data with cancellation (2s)"
 						Click="FlyoutRequestingDataWithCancelClick" />
 				<TextBlock Text="{Binding FlyoutData.Id}" />
 				<Button uen:Navigation.Request="!DialogsComplexFlyout"
