--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/TelerikControlsPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/TelerikControlsPage.xaml
@@ -1,22 +1,22 @@
 ﻿<Page
-    x:Class="MauiEmbedding.Presentation.TelerikControlsPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:local="using:MauiEmbedding.Presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	  xmlns:embed="using:Uno.Extensions.Maui"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	  xmlns:maui="using:Microsoft.Maui.Controls"
-      xmlns:telerik="using:Telerik.Maui.Controls"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	x:Class="MauiEmbedding.Presentation.TelerikControlsPage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:embed="using:Uno.Extensions.Maui"
+	xmlns:local="using:MauiEmbedding.Presentation"
+	xmlns:maui="using:Microsoft.Maui.Controls"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:telerik="using:Telerik.Maui.Controls"
+	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	mc:Ignorable="d">
 
-	<StackPanel>
+	<StackPanel Padding="10">
 		<embed:MauiContent>
 			<maui:ScrollView>
 				<maui:ScrollView.Content>
 					<maui:VerticalStackLayout Spacing="16">
-						<telerik:RadBusyIndicator AnimationType="Animation10" x:Name="indicator"/>
+						<telerik:RadSignaturePad HeightRequest="300" />
 					</maui:VerticalStackLayout>
 				</maui:ScrollView.Content>
 			</maui:ScrollView>
