--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
@@ -4,8 +4,8 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	NavigationCacheMode="Required"
 	Background="{ThemeResource BackgroundBrush}"
+	NavigationCacheMode="Required"
 	mc:Ignorable="d">
 
 	<StackPanel
@@ -16,6 +16,7 @@
 		<Button Click="{x:Bind Vm.GoToCommunityToolkitMauiControls}" Content="CommunityToolkit.Maui controls" />
 		<Button Click="{x:Bind Vm.GoToMauiEssentialsApi}" Content="Maui.Essentials APIs" />
 		<Button Click="{x:Bind Vm.GoToTelerikPage}" Content="Telerik controls, remember to reference the nuget server" />
+		<Button Click="{x:Bind Vm.GoToColorsPage}" Content="Maui Colors and Resources" />
 	</StackPanel>
 
 </Page>
