fix: Only navigate if parent of new route matches parent of existing route

--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/TabBar/TabBarHomePage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/TabBar/TabBarHomePage.xaml
@@ -47,6 +47,9 @@
 					<Button AutomationProperties.AutomationId="ProductsProfileButton"
 							Content="Profile"
 							uen:Navigation.Request="Profile" />
+					<Button AutomationProperties.AutomationId="ProductsSettingsButton"
+							Content="Settings"
+							uen:Navigation.Request="Settings" />
 				</StackPanel>
 				<StackPanel uen:Region.Name="Deals"
 							AutomationProperties.AutomationId="DealsStackPanel"
