--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MauiColorsPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MauiColorsPage.xaml
@@ -7,6 +7,7 @@
 	xmlns:local="using:MauiEmbedding.Presentation"
 	xmlns:maui="using:Microsoft.Maui.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:utu="using:Uno.Toolkit.UI"
 	Padding="20"
 	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
 	mc:Ignorable="d">
@@ -20,15 +21,23 @@
 	</Page.Resources>
 
 
-	<StackPanel>
-		<embed:MauiContent>
-			<maui:VerticalStackLayout Spacing="10">
-				<maui:Label Text="This text should be Red" TextColor="{embed:MauiColor Value='#FF0000'}" />
-				<maui:Label x:Name="lbl" Text="This text should be Fuchsia (set on code-behind)" />
-				<maui:Label Text="This background should be Pink" BackgroundColor="{embed:MauiColor Value='#FFC0CB'}" />
-				<maui:Label Text="This TextColor should be Purple, using named color" TextColor="{embed:MauiColor Value='Purple'}" />
-				<maui:Label Text="{embed:MauiResource Key=HelloWorld}" />
-			</maui:VerticalStackLayout>
-		</embed:MauiContent>
-	</StackPanel>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<utu:NavigationBar Content="{Binding Title}" />
+
+		<StackPanel Grid.Row="1">
+			<embed:MauiContent>
+				<maui:VerticalStackLayout Spacing="10">
+					<maui:Label Text="This text should be Red" TextColor="{embed:MauiColor Value='#FF0000'}" />
+					<maui:Label x:Name="lbl" Text="This text should be Fuchsia (set on code-behind)" />
+					<maui:Label BackgroundColor="{embed:MauiColor Value='#FFC0CB'}" Text="This background should be Pink" />
+					<maui:Label Text="This TextColor should be Purple, using named color" TextColor="{embed:MauiColor Value='Purple'}" />
+					<maui:Label Text="{embed:MauiResource Key=HelloWorld}" />
+				</maui:VerticalStackLayout>
+			</embed:MauiContent>
+		</StackPanel>
+	</Grid>
 </Page>
