fix: Correcting legacy targets

--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/NavigationView/NavigationViewDataCookbooksPage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/NavigationView/NavigationViewDataCookbooksPage.xaml
@@ -23,14 +23,14 @@
 		<ui:FeedView Source="{Binding Cookbooks}"
 					 Grid.Row="1">
 			<DataTemplate>
-				<ItemsRepeater ItemsSource="{Binding Data}"
+				<muxc:ItemsRepeater ItemsSource="{Binding Data}"
 							   uen:Navigation.Request="CookbookDetails">
 					<DataTemplate>
 						<TextBlock Text="{Binding Name}"
 								   Foreground="Black"
 								   FontSize="24" />
 					</DataTemplate>
-				</ItemsRepeater>
+				</muxc:ItemsRepeater>
 			</DataTemplate>
 		</ui:FeedView>
 	</Grid>
