--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/NavigationView/NavigationViewDataEntityPickerFlyout.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/NavigationView/NavigationViewDataEntityPickerFlyout.xaml
@@ -25,14 +25,14 @@
 		<ui:FeedView Source="{Binding Recipes}"
 					 Grid.Row="1">
 			<DataTemplate>
-				<ItemsRepeater ItemsSource="{Binding Data}"
+				<muxc:ItemsRepeater ItemsSource="{Binding Data}"
 							   uen:Navigation.Request="-">
 					<DataTemplate>
 						<TextBlock Text="{Binding Name}"
 								   Foreground="Black"
 								   FontSize="24" />
 					</DataTemplate>
-				</ItemsRepeater>
+				</muxc:ItemsRepeater>
 			</DataTemplate>
 		</ui:FeedView>
 
@@ -41,14 +41,14 @@
 					 Grid.Row="1"
 					 Grid.Column="1">
 			<DataTemplate>
-				<ItemsRepeater ItemsSource="{Binding Data}"
+				<muxc:ItemsRepeater ItemsSource="{Binding Data}"
 							   uen:Navigation.Request="-">
 					<DataTemplate>
 						<TextBlock Text="{Binding Name}"
 								   Foreground="Black"
 								   FontSize="24" />
 					</DataTemplate>
-				</ItemsRepeater>
+				</muxc:ItemsRepeater>
 			</DataTemplate>
 		</ui:FeedView>
 	</Grid>
