--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
@@ -1,22 +1,23 @@
 <Page
-	x:Class="MauiEmbedding.Presentation.MainPage"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Background="{ThemeResource BackgroundBrush}"
-	NavigationCacheMode="Required"
-	mc:Ignorable="d">
+    x:Class="MauiEmbedding.Presentation.MainPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Background="{ThemeResource BackgroundBrush}"
+    NavigationCacheMode="Required"
+    mc:Ignorable="d">
 
-	<StackPanel
-		HorizontalAlignment="Center"
-		VerticalAlignment="Center"
-		Spacing="10">
-		<Button Click="{x:Bind Vm.GoToMauiControls}" Content="Maui simple controls" />
-		<Button Click="{x:Bind Vm.GoToCommunityToolkitMauiControls}" Content="CommunityToolkit.Maui controls" />
-		<Button Click="{x:Bind Vm.GoToMauiEssentialsApi}" Content="Maui.Essentials APIs" />
-		<Button Click="{x:Bind Vm.GoToTelerikPage}" Content="Telerik controls, remember to reference the nuget server" />
-		<Button Click="{x:Bind Vm.GoToColorsPage}" Content="Maui Colors and Resources" />
-	</StackPanel>
+    <StackPanel
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        Spacing="10">
+        <Button Click="{x:Bind Vm.GoToMauiControls}" Content="Maui simple controls" />
+        <Button Click="{x:Bind Vm.GoToCommunityToolkitMauiControls}" Content="CommunityToolkit.Maui controls" />
+        <Button Click="{x:Bind Vm.GoToMauiEssentialsApi}" Content="Maui.Essentials APIs" />
+        <Button Click="{x:Bind Vm.GoToTelerikPage}" Content="Telerik controls, remember to reference the nuget server" />
+        <Button Click="{x:Bind Vm.GoToColorsPage}" Content="Maui Colors and Resources" />
+        <Button Click="{x:Bind Vm.GoToExternalLibPage}" Content="Referenced External library controls" />
+    </StackPanel>
 
 </Page>
