chore: added telerik controls back
(cherry picked from commit a187b9f53dcefc5b9b69eeb67f55f8ce8a14f8f0)

--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
@@ -14,7 +14,7 @@
 		<Button Click="{x:Bind Vm.GoToMauiControls}" Content="Maui simple controls" />
 		<Button Click="{x:Bind Vm.GoToCommunityToolkitMauiControls}" Content="CommunityToolkit.Maui controls" />
 		<Button Click="{x:Bind Vm.GoToMauiEssentialsApi}" Content="Maui.Essentials APIs" />
-		<!--<Button Click="{x:Bind Vm.GoToTelerikPage}" Content="Telerik controls, remember to reference the nuget server" />-->
+		<Button Click="{x:Bind Vm.GoToTelerikPage}" Content="Telerik controls, remember to reference the nuget server" />
 		<Button Click="{x:Bind Vm.GoToColorsPage}" Content="Maui Colors and Resources" />
 		<Button Click="{x:Bind Vm.GoToExternalLibPage}" Content="Referenced External library controls" />
 	</StackPanel>
