--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/TelerikControlsPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/TelerikControlsPage.xaml
@@ -7,7 +7,7 @@
 	xmlns:local="using:MauiEmbedding.Presentation"
 	xmlns:maui="using:Microsoft.Maui.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-
+	xmlns:telerik="using:Telerik.Maui.Controls"
 	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
 	mc:Ignorable="d">
 
@@ -16,7 +16,9 @@
 			<maui:ScrollView>
 				<maui:ScrollView.Content>
 					<maui:VerticalStackLayout Spacing="16">
-						<!-- <telerik:RadSignaturePad HeightRequest="300" /> -->
+						<telerik:RadSignaturePad HeightRequest="300" />
+						<telerik:NumericInputEntry Text="Text" />
+						<telerik:RadBusyIndicator IsBusy="true" />
 					</maui:VerticalStackLayout>
 				</maui:ScrollView.Content>
 			</maui:ScrollView>
