feat: added Esri maps sample and package
(cherry picked from commit 4050fba8ee3ce8da77169b89c9757e512437b171)

--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
@@ -17,6 +17,7 @@
 		<Button Click="{x:Bind Vm.GoToTelerikPage}" Content="Telerik controls, remember to reference the nuget server" />
 		<Button Click="{x:Bind Vm.GoToColorsPage}" Content="Maui Colors and Resources" />
 		<Button Click="{x:Bind Vm.GoToExternalLibPage}" Content="Referenced External library controls" />
+		<Button Click="{x:Bind Vm.GoToMapsPage}" Content="ESRI maps page sample" />
 	</StackPanel>
 
 </Page>
