--- a/samples/MauiProjects/MauiApp1/MainPage.xaml
+++ b/samples/MauiProjects/MauiApp1/MainPage.xaml
@@ -4,6 +4,7 @@
 	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 	xmlns:custom="clr-namespace:MauiControlsExternal;assembly=MauiControlsExternal"
+	xmlns:map="http://schemas.esri.com/arcgis/runtime/2013"
 	xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui">
 
 	<ScrollView>
@@ -12,6 +13,10 @@
 			Spacing="25"
 			VerticalOptions="Center">
 
+			<map:MapView
+				x:Name="mapView"
+				BackgroundColor="Fuchsia"
+				HeightRequest="200" />
 			<Image
 				HeightRequest="200"
 				HorizontalOptions="Center"
