--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/ExternalLibPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/ExternalLibPage.xaml
@@ -19,11 +19,11 @@
 	</Grid.RowDefinitions>
 	<utu:NavigationBar Content="{Binding Title}" />
 
-	<embed:MauiContent Grid.Row="1" x:Name="mauiContent">
+	<embed:UnoMauiHost Grid.Row="1" x:Name="mauiContent">
 		<maui:VerticalStackLayout>
 			<external:CustomEntry Placeholder="This is a external control" BorderColor="{embed:MauiColor Value='Fuchsia'}"/>
 		</maui:VerticalStackLayout>
-	</embed:MauiContent>
+	</embed:UnoMauiHost>
 </Grid>
 
 </Page>
