--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/TelerikControlsPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/TelerikControlsPage.xaml
@@ -13,7 +13,7 @@
 
 
 	<StackPanel Padding="10">
-		<embed:MauiContent>
+		<embed:UnoMauiHost>
 			<maui:ScrollView>
 				<maui:ScrollView.Content>
 					<maui:VerticalStackLayout Spacing="16">
@@ -23,6 +23,6 @@
 					</maui:VerticalStackLayout>
 				</maui:ScrollView.Content>
 			</maui:ScrollView>
-		</embed:MauiContent>
+		</embed:UnoMauiHost>
 	</StackPanel>
 </Page>
