--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/EsriMapsPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/EsriMapsPage.xaml
@@ -20,10 +20,10 @@
 		</Grid.RowDefinitions>
 		<utu:NavigationBar Content="{Binding Title}" />
 
-		<embed:UnoMauiHost x:Name="mauiContent" Grid.Row="1">
+		<embed:MauiHost x:Name="mauiContent" Grid.Row="1">
 			<maui:Grid x:Name="grid">
 				<!--<map:MapView x:Name="mapView" />-->
 			</maui:Grid>
-		</embed:UnoMauiHost>
+		</embed:MauiHost>
 	</Grid>
 </Page>
