--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MCTControlsPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MCTControlsPage.xaml
@@ -25,7 +25,7 @@
 					VerticalAlignment="Center">
 			<TextBlock FontSize="24"
 					   Text="MCT controls" />
-			<embed:UnoMauiHost>
+			<embed:MauiHost>
 				<maui:ScrollView>
 					<maui:ScrollView.Content>
 						<maui:VerticalStackLayout Spacing="16" x:Name="layout">
@@ -50,7 +50,7 @@
 						</maui:VerticalStackLayout>
 					</maui:ScrollView.Content>
 				</maui:ScrollView>
-			</embed:UnoMauiHost>
+			</embed:MauiHost>
 		</StackPanel>
 	</Grid>
 </Page>
