--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
@@ -4,6 +4,7 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	NavigationCacheMode="Required"
 	mc:Ignorable="d">
 
@@ -11,13 +12,13 @@
 		HorizontalAlignment="Center"
 		VerticalAlignment="Center"
 		Spacing="10">
-		<Button Click="{x:Bind Vm.GoToMauiControls}" Content="Maui simple controls" />
-		<Button Click="{x:Bind Vm.GoToCommunityToolkitMauiControls}" Content="CommunityToolkit.Maui controls" />
-		<Button Click="{x:Bind Vm.GoToMauiEssentialsApi}" Content="Maui.Essentials APIs" />
-		<Button Click="{x:Bind Vm.GoToTelerikPage}" Content="Telerik controls, remember to reference the nuget server" />
-		<Button Click="{x:Bind Vm.GoToColorsPage}" Content="Maui Colors and Resources" />
-		<Button Click="{x:Bind Vm.GoToExternalLibPage}" Content="Referenced External library controls" />
-		<Button Click="{x:Bind Vm.GoToMapsPage}" Content="ESRI maps page sample" />
+		<Button uen:Navigation.Request="MauiControls" Content="Maui simple controls" />
+		<Button uen:Navigation.Request="MCTControls" Content="CommunityToolkit.Maui controls" />
+		<Button uen:Navigation.Request="MauiEssentials" Content="Maui.Essentials APIs" />
+		<Button uen:Navigation.Request="TelerikControls" Content="Telerik controls, remember to reference the nuget server" />
+		<Button uen:Navigation.Request="MauiColors" Content="Maui Colors and Resources" />
+		<Button uen:Navigation.Request="ExternalLib" Content="Referenced External library controls" />
+		<Button uen:Navigation.Request="EsriMaps" Content="ESRI maps page sample" />
 	</StackPanel>
 
 </Page>
