--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
@@ -1,24 +1,27 @@
-<Page
-	x:Class="MauiEmbedding.Presentation.MainPage"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:uen="using:Uno.Extensions.Navigation.UI"
-	NavigationCacheMode="Required"
-	mc:Ignorable="d">
+<Page x:Class="MauiEmbedding.Presentation.MainPage"
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	  xmlns:embed="using:Uno.Extensions.Maui"
+	  xmlns:utu="using:Uno.Toolkit.UI"
+	  xmlns:external="using:MauiControlsExternal"
+	  xmlns:maui="using:Microsoft.Maui.Controls"
+	  NavigationCacheMode="Required"
+	  mc:Ignorable="d">
 
-	<StackPanel
-		HorizontalAlignment="Center"
-		VerticalAlignment="Center"
-		Spacing="10">
-		<Button uen:Navigation.Request="MauiControls" Content="Maui simple controls" />
-		<Button uen:Navigation.Request="MCTControls" Content="CommunityToolkit.Maui controls" />
-		<Button uen:Navigation.Request="MauiEssentials" Content="Maui.Essentials APIs" />
-		<Button uen:Navigation.Request="TelerikControls" Content="Telerik controls, remember to reference the nuget server" />
-		<Button uen:Navigation.Request="MauiColors" Content="Maui Colors and Resources" />
-		<Button uen:Navigation.Request="ExternalLib" Content="Referenced External library controls" />
-		<Button uen:Navigation.Request="EsriMaps" Content="ESRI maps page sample" />
-	</StackPanel>
+	<Grid Background="{ThemeResource BackgroundBrush}">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<utu:NavigationBar Content="{Binding Title}" />
+
+		<embed:MauiHost Grid.Row="1"
+						x:Name="mauiContent"
+						Source="external:EmbeddedControl" />
+
+	</Grid>
 
 </Page>
