fix: adding workaround to fix strong refs to maui types

--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
@@ -20,7 +20,7 @@
 
 		<embed:MauiHost Grid.Row="1"
 						x:Name="mauiContent"
-						Source="external:EmbeddedControl" />
+						Source="external:SyncfusionDemoPage" />
 
 	</Grid>
 
