chore: ensure the VisualElementChanged event exists on all frameworks

--- a/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
+++ b/samples/MauiEmbedding/MauiEmbedding/Presentation/MainPage.xaml
@@ -20,6 +20,7 @@
 
 		<embed:MauiHost Grid.Row="1"
 						x:Name="mauiContent"
+						VisualElementChanged="OnVisualElementChanged"
 						Source="external:SyncfusionDemoPage" />
 
 	</Grid>
