chore: Adding material styles and missing pub files

--- a/samples/Playground/Playground/AppResources.xaml
+++ b/samples/Playground/Playground/AppResources.xaml
@@ -6,11 +6,11 @@
 		<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
 
 		<!-- Load the Material control resources -->
-		<!--<MaterialResources xmlns="using:Uno.Material" />-->
+		<MaterialResources xmlns="using:Uno.Material" />
 		<ToolkitResources xmlns="using:Uno.Toolkit.UI" />
 
 		<!-- Load Material Toolkit resources -->
-		<!--<MaterialToolkitResources xmlns="using:Uno.Toolkit.UI.Material" />-->
+		<MaterialToolkitResources xmlns="using:Uno.Toolkit.UI.Material" />
 		<!-- Place resources here -->
 	</ResourceDictionary.MergedDictionaries>
 	<Style TargetType="utu:ExtendedSplashScreen"
