--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Reactive/ReactiveFivePage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Reactive/ReactiveFivePage.xaml
@@ -1,26 +1,44 @@
 ﻿<Page
-    x:Class="TestHarness.Ext.Navigation.Reactive.ReactiveFivePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestHarness.Ext.Navigation.Reactive"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	  mc:Ignorable="d"
-	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
-	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	x:Class="TestHarness.Ext.Navigation.Reactive.ReactiveFivePage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:TestHarness.Ext.Navigation.Reactive"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	mc:Ignorable="d">
 
 	<Grid>
-		<StackPanel HorizontalAlignment="Center"
-					VerticalAlignment="Center">
-			<Button AutomationProperties.AutomationId="FivePageBackButton"
-					Content="Back"
-					uen:Navigation.Request="-" />
-			<Button AutomationProperties.AutomationId="FivePageBackCodebehindButton"
-					Content="Back (Codebehind)"
-					Click="FivePageBackCodebehindClick" />
-			<Button AutomationProperties.AutomationId="FivePageBackViewModelButton"
-					Content="Back (ViewModel)"
-					Command="{Binding GoBack}" />
+		<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+			<Button
+				uen:Navigation.Request="ReactiveSix"
+				AutomationProperties.AutomationId="FivePageToSixPageButton"
+				Content="Six" />
+			<Button
+				uen:Navigation.Request="-"
+				AutomationProperties.AutomationId="FivePageBackButton"
+				Content="Back" />
+			<Button
+				AutomationProperties.AutomationId="FivePageToSixPageCodebehindButton"
+				Click="FivePageToSixPageCodebehindClick"
+				Content="Six (Codebehind)" />
+			<Button
+				AutomationProperties.AutomationId="FivePageBackCodebehindButton"
+				Click="FivePageBackCodebehindClick"
+				Content="Back (Codebehind)" />
+			<Button
+				AutomationProperties.AutomationId="FivePageToSixPageViewModelButton"
+				Command="{Binding GoToSix}"
+				Content="Six (ViewModel)" />
+			<Button
+				AutomationProperties.AutomationId="FivePageBackViewModelButton"
+				Command="{Binding GoBack}"
+				Content="Back (ViewModel)" />
+			<Button
+				AutomationProperties.AutomationId="FivePageToSixPageDataButton"
+				Command="{Binding GoToSixData}"
+				Content="Six (Data)" />
 
 		</StackPanel>
 	</Grid>
