--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Reactive/ReactiveSixPage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Reactive/ReactiveSixPage.xaml
@@ -1,26 +1,27 @@
 ﻿<Page
-    x:Class="TestHarness.Ext.Navigation.Reactive.ReactiveSixPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestHarness.Ext.Navigation.Reactive"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	  mc:Ignorable="d"
-	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
-	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+	x:Class="TestHarness.Ext.Navigation.Reactive.ReactiveSixPage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="using:TestHarness.Ext.Navigation.Reactive"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	mc:Ignorable="d">
 	<Grid>
-		<StackPanel HorizontalAlignment="Center"
-					VerticalAlignment="Center">
-			<Button AutomationProperties.AutomationId="SixPageBackButton"
-					Content="Back"
-					uen:Navigation.Request="-" />
-			<Button AutomationProperties.AutomationId="SixPageBackCodebehindButton"
-					Content="Back (Codebehind)"
-					Click="SixPageBackCodebehindClick" />
-			<Button AutomationProperties.AutomationId="SixPageBackViewModelButton"
-					Content="Back (ViewModel)"
-					Command="{Binding GoBack}" />
+		<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+			<Button
+				uen:Navigation.Request="-"
+				AutomationProperties.AutomationId="SixPageBackButton"
+				Content="Back" />
+			<Button
+				AutomationProperties.AutomationId="SixPageBackCodebehindButton"
+				Click="SixPageBackCodebehindClick"
+				Content="Back (Codebehind)" />
+			<Button
+				AutomationProperties.AutomationId="SixPageBackViewModelButton"
+				Command="{Binding GoBack}"
+				Content="Back (ViewModel)" />
 
 		</StackPanel>
 	</Grid>
