fix: free viewmodel and prevent caching of page on back
(cherry picked from commit 3ce993db1baf709ef484d418f2c843d0365a3c78)

--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Reactive/ReactiveThreePage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Reactive/ReactiveThreePage.xaml
@@ -7,6 +7,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:uen="using:Uno.Extensions.Navigation.UI"
 	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	NavigationCacheMode="Required"
 	mc:Ignorable="d">
 
 	<Grid>
