--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Dialogs/ContentDialogsPage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Dialogs/ContentDialogsPage.xaml
@@ -39,6 +39,10 @@
 						uen:Navigation.Request="!DialogsComplex/DialogsComplexDialogSecond"
 						Content="Complex Dialog Nav Request - Second Page" />
 
+
+				<Button AutomationProperties.AutomationId="ComplexDialogSecondPageButton"
+					uen:Navigation.Request="ContentDialogsSecond"
+					Content="Complex Dialog - Second Page" />
 			</StackPanel>
 		</ScrollViewer>
 	</Grid>
