chore: Adding basic navigation for chefs sample

--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsRootPage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsRootPage.xaml
@@ -7,7 +7,8 @@
 	  mc:Ignorable="d"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<Grid>
+	<StackPanel>
 		<TextBlock Text="Root" />
-	</Grid>
+		<TextBlock Text="{Binding Credentials.Username}" />
+	</StackPanel>
 </Page>
