--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsRecipeDetailsPage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsRecipeDetailsPage.xaml
@@ -7,7 +7,8 @@
 	  mc:Ignorable="d"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<Grid>
+	<StackPanel>
 		<TextBlock Text="ChefsRecipeDetails" />
-	</Grid>
+		<TextBlock Text="{Binding Recipe.Name}" />
+	</StackPanel>
 </Page>
