--- a/samples/Playground/Playground/Views/FourthPage.xaml
+++ b/samples/Playground/Playground/Views/FourthPage.xaml
@@ -29,7 +29,7 @@
 		<StackPanel Grid.Row="1">
 			<Button uen:Navigation.Request="-"
 					Content="Back" />
-			<Button Content="Fifth Page via ViewModel method"
+			<Button Content="Fifth Page via ViewModel method 1 2"
 					Click="{x:Bind ViewModel.NavigateToFifth, Mode=OneWay}" />
 			<Button Content="Fifth Page via code behind"
 					Click="FifthPageClick" />
