--- a/samples/Playground/Playground/Views/HomePage.xaml
+++ b/samples/Playground/Playground/Views/HomePage.xaml
@@ -15,7 +15,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition />
 		</Grid.RowDefinitions>
-		<TextBlock Text="Home"
+		<TextBlock Text="Home 1"
 				   HorizontalAlignment="Center"
 				   FontSize="48" />
 		<ScrollViewer Grid.Row="1">
