chore: Search naviation

--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsHomePage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsHomePage.xaml
@@ -13,5 +13,7 @@
 				Command="{Binding ShowCurrentProfile}" />
 		<Button Content="Profile (New)"
 				Command="{Binding ShowCurrentProfileNew}" />
+		<Button Content="Search - Lunch"
+				Command="{Binding ShowSearchCategory}" />
 	</StackPanel>
 </Page>
