--- a/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsSearchPage.xaml
+++ b/testing/TestHarness/TestHarness.Shared/Ext/Navigation/Apps/Chefs/ChefsSearchPage.xaml
@@ -7,7 +7,10 @@
 	  mc:Ignorable="d"
 	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-	<Grid>
+	<StackPanel>
 		<TextBlock Text="ChefsSearch" />
-	</Grid>
+		<TextBlock Text="{Binding Filter.Category}" />
+		<Button Content="Recipe"
+				Command="{Binding ShowRecipe}" />
+	</StackPanel>
 </Page>
